--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <!-- google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Oswald|Permanent+Marker&display=swap" rel="stylesheet">
     <link href="./css/all.css" rel="stylesheet">
-    <title>Phone App</title>
+    <title>Etoile Beauty</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
