--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content=
       "the best organic skin care products such as lightening black soap, brightening lotions, creams and oils for a natural glowing face, body and all-round beauty"
     />
+    <meta name="google-site-verification" content="c4n_8ka5J5gFz7ShglsPMS3swr7Z7Jvy9bOOvE1A7fM"/>
     <meta name="theme-color" content="#000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
