--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="keywords" content="Etoile Beauty, Organic body cream, lightening black soap, Natural skin care, brigthening face lotion, Abuja, Nigeria"/>
     <meta name="description" content=
-      "the best organic skin care products such as lightening black soap, brightening lotions, creams and oils for a natural glowing face, body and all-round beauty"
+      "Etoile Beauty is the best store to buy organic and natural skin care products, lightening black soap, brightening lotions, creams and oils for a natural glowing face, body and all-round beauty"
     />
     <meta name="google-site-verification" content="c4n_8ka5J5gFz7ShglsPMS3swr7Z7Jvy9bOOvE1A7fM"/>
     <meta name="theme-color" content="#000" />
