--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="Etoile Beauty, Organic body cream, lightening black soap, Natural skin care, brigthening face lotion, Abuja, Nigeria"/>
     <meta name="description" content=
-      "Etoile Beauty is the best store to buy organic and natural skin care products, lightening black soap, brightening lotions, creams and oils for a natural glowing face, body and all-round beauty"
+      "Etoile Beauty Nigeria is your best bet for buying organic and natural skin care products, lightening black soap, brightening lotions, creams and oils for a natural glowing face, body and all-round beauty"
     />
     <meta name="google-site-verification" content="c4n_8ka5J5gFz7ShglsPMS3swr7Z7Jvy9bOOvE1A7fM"/>
     <meta name="theme-color" content="#000" />
@@ -27,7 +27,7 @@
     <!-- google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Oswald|Permanent+Marker&display=swap" rel="stylesheet">
     <link href="./css/all.css" rel="stylesheet">
-    <title>Etoile Beauty</title>
+    <title>Etoile Beauty Nigeria</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
