--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       "Etoile Beauty Nigeria is your best bet for buying organic and natural skin care products, lightening black soap, brightening lotions, creams and oils for a natural glowing face, body and all-round beauty"
     />
     <meta name="google-site-verification" content="c4n_8ka5J5gFz7ShglsPMS3swr7Z7Jvy9bOOvE1A7fM"/>
-    <meta name="theme-color" content="#000" />
+    <meta name="theme-color" content="#db7093" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
