--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
     <!-- google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Oswald|Permanent+Marker&display=swap" rel="stylesheet">
     <link href="./css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/theme.css">
     <title>Etoile Beauty Nigeria</title>
   </head>
   <body>
